[package]
name = "recipe-shopping-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-filter = "0.1.0"
eyre = "0.6.11"
float-cmp = "0.9.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
slint = "1.3.2"
tabled = "0.15.0"
thiserror = "1.0.51"
uom = { version = "0.35.0", features = ["use_serde"] }
